@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Geo-Parse-OSM
-version:            0.35
+version:            0.35_01
 abstract:           OpenStreetMap file parser
 author:
     - liosha <liosha@cpan.org>
